# level-3

./: README.md  deploy_contracts.ps1
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs  test.rs
contracts/staking/test_snapshots/test/: test_get_stake.1.json  test_inter_contract_call_claim_rewards.1.json  test_successful_stake.1.json  test_unstake_and_rewards.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: test_mint_and_balance.1.json  test_transfer.1.json
frontend/: deploy.mjs  package-lock.json  package.json
frontend/src/: App.tsx  index.css  utils.test.ts  utils.ts
