[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.0"
token = { path = "../token" }

[dev_dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
